# AudioSourceRecognition

./: .gitignore  README.md
AudioSourceApplication/AudioSourceApplication/: Form1.Designer.cs  Form1.cs  MainForm.Designer.cs  MainForm.cs  Program.cs  WavFile.cs
AudioSourceApplication/AudioSourceApplication/Properties/: AssemblyInfo.cs  Resources.Designer.cs  Settings.Designer.cs
AudioSourceRecognition/Assets/: MainMixar.mixer
AudioSourceRecognition/Assets/Materials/: WaveformColor.mat
AudioSourceRecognition/ProjectSettings/: ProjectSettings.asset
ExternalLibrary/: CMakeLists.txt  ExternalLibrary.cpp  ExternalLibrary.h  Misc.cpp  WindowFunction.cpp
ExternalLibrary/ExternalLibrary/: FourierTransform.cs
ExternalLibrary/OutputTest/: FourierTransform.cs  Program.cs  Window.cs
ExternalLibrary/WaveTest/: App.xaml  App.xaml.cs  MainWindow.xaml  MainWindow.xaml.cs  packages.config
ExternalLibraryCore/: FourierTransform.cs  Window.cs
GuitarRecognition/ChartProject/: Chart.hpp  ChartProject.vcxproj  ChartProject.vcxproj.filters  Main.cpp
GuitarRecognition/GuitarRecognition/: Analyzer.hpp  DriverDropdown.hpp  GodStructure.hpp  GuitarRecognition.vcxproj  GuitarRecognition.vcxproj.filters  InputController.hpp  Main.cpp  State.hpp
GuitarRecognition/GuitarRecorder/: Form1.Designer.cs  Form1.cs  Program.cs  Settings.Designer.cs  Settings.cs  packages.config
GuitarRecognition/PyGuitarRecognition/: main.py
PyGuitarRecognition/: main.py
Temp/ExternalLibrary/: CMakeLists.txt  ExternalLibrary.h  Misc.cpp  WindowFunction.cpp
(+65 files in other folders)
